# Tesserae

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
agentops_sdk/: __init__.py  attestation.py  client.py  envelope.py  merkle.py  signing.py  zkp.py  zkp_differential.py
docs/: GLOSSARY.md
examples/colosseum_adapter/: EVIDENCE.md  GEMINI_REPLICATION.md  PAPER2_OUTLINE.md  behavioral_fingerprint_analyzer.py  behavioral_fingerprint_results.json  collusion_on_paper_analyzer.py  colosseum_adapter.py  demo_attestation.py  demo_evidence_gap.py  demo_zkp.py  demo_zkp_differential.py  forensic_gap_proof.py  forensic_gap_results.json  gap3_differential_audit.py  gap3_live_llm_demo.py  gap3_live_results.json
examples/colosseum_adapter/experiments/configs/: gap3_claude_3agent_collusion.yaml  gap3_claude_ablation.yaml  gap3_claude_sonnet_sweep.yaml
examples/colosseum_adapter/experiments/results/: gap3_all_runs.json
tests/adversarial/: test_adversarial.py
tests/e2e/: test_full_flow.py
tests/integration/: test_colosseum_adapter.py  test_terrarium_adapter.py
tests/unit/: test_zkp_differential.py
verifier/: agentops_verify.py  verifier_core.py  verify_attestation.py  verify_differential.py  verify_zkp.py
