[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentops-replay"
version = "1.0.0"
description = "Cryptographically verifiable, immutable event logging for AI agents"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
readme = "README.md"
keywords = ["ai", "agents", "audit", "accountability", "observability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Logging",
    "Topic :: Security",
]

# Core SDK + Verifier: cryptography for Ed25519 signing
dependencies = [
    "cryptography>=40.0",
]

[project.optional-dependencies]
langchain = [
    "langchain>=0.1.0",
]
server = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic-settings>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "pytest-cov>=4.0",
]

[project.scripts]
agentops-verify = "verifier.agentops_verify:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentops_sdk*", "verifier*", "sdk*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "requires_docker: mark test as requiring a running Docker/Postgres instance",
]
